<resources>
    <string name="app_name">Cloud Room</string>
    <string name="dict">dict</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="error_password_wrong">Password wrong</string>
    <string name="error_already_authed">You have already logged in</string>
    <string name="error_need_auth">Need Auth</string>
    <string name="error_no_the_loop">This device is not available</string>
    <string name="error_wrong_operation">Wrong operation</string>
    <string name="error_loop_exited">This device has already been referenced</string>
    <string name="error_operation_failed">Operation failed</string>
    <string name="error_request_timeout">Time out</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_invalid_param">Invalid param</string>
    <string name="error_no_mcc_card">NO MCC Card</string>
    <string name="error_loop_has_been_ref">This device has already been referenced</string>
    <string name="error_reach_limit">Reach max support client</string>
    <string name="error_room_not_add_this_device">The room did not add this kind of device</string>
    <string name="error_zone_abnormal">Zone abnormal</string>
    <string name="error_wrong_password">Password wrong</string>
    <string name="error_can_not_find_scenario">Can not find this scenario</string>
    <string name="error_upgrade_unknown_error">Upgrade, unknown error</string>
    <string name="error_upgrade_file_error">Upgrade, file error</string>
    <string name="error_upgrade_flash_error">Upgrade, flash error</string>
    <string name="error_upgrade_hardware_error">Upgrade, hardware error</string>
    <string name="error_upgrade_no_new_version">This is already the latest version</string>
    <string name="error_upgrade_doing">Upgrading</string>
    <string name="error_upgrade_done_reboot">Upgraded and restart</string>
    <string name="error_ipc_reach_max_support">Reach max support client</string>
    <string name="error_ipc_play_error">Play error</string>
    <string name="error_room_no_this_type_device">This room does not have this kind of device</string>
    <string name="error_time_out">Please check your network</string>
    <string name="error_offline">Device offline</string>
    <string name="error_get_forest">Get forest Error</string>
    <string name="error_get_cube_weather">Get Cube Weather Error</string>
    <string name="error_invalid_message_formart">Invalid Message Format</string>
    <string name="error_invalid_language">Invalid Language</string>
    <string name="error_invalid_phone_number">Invalid Phone Number</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_vcode_too_frequent">Request Vcode Too Frequent</string>
    <string name="error_vcode_failed">Request Vcode Failed</string>
    <string name="error_invalid_name">Invalid Name</string>
    <string name="error_invalid_pwd">Invalid Password</string>
    <string name="error_phone_registered">Phone Number Has Been Registed</string>
    <string name="error_invalid_phone_vcode">Invalid Phone Vcode</string>
    <string name="error_email_registered">Email has been registed</string>
    <string name="error_invali_email_vcode">Invalid Email Vcode</string>
    <string name="error_login_failed">Login Failed</string>
    <string name="error_invali_phone_uuid">Invalid Phone Uuid</string>
    <string name="error_invali_phone_type">Invalid Phone Type</string>
    <string name="error_invali_push_vendor">Invalid PUSH Vendor</string>
    <string name="error_invali_push_id">Invalid PUSH ID</string>
    <string name="error_invali_pwd_wrong">Password Wrong</string>
    <string name="error_bind_pwd_error">Password Wrong</string>
    <string name="error_can_not_bind">Device already bind by other user.</string>
    <string name="alarm_unknown">Unknown error</string>
    <string name="alarm_medicalaid">Medical emergency</string>
    <string name="alarm_emergency">Emergency</string>
    <string name="alarm_fire">Fire alarm</string>
    <string name="alarm_panic">Duress</string>
    <string name="alarm_code_intrusion">Thief Alarm</string>
    <string name="alarm_code_temper">Tamper Alarm</string>
    <string name="alarm_code_pwdwrong">Password wrong</string>
    <string name="alarm_code_lowbattery">Low battery</string>
    <string name="alarm_code_dooropen">The door is open</string>
    <string name="alarm_code_zonetrouble">Zone Fault</string>
    <string name="alarm_code_gas">Gas leak</string>
    <string name="alarm_code_pm2p5">PM 2.5 exceed</string>
    <string name="zone_alarm_fire">Fire alarm</string>
    <string name="zone_alarm_help">Help</string>
    <string name="zone_alarm_gas">Gas leak</string>
    <string name="zone_alarm_thief">Thief</string>
    <string name="zone_alarm_emergency">Emergency</string>
    <string name="websocket_close_normal">Normal exit</string>
    <string name="websocket_close_cannot_connect">Connect failed</string>
    <string name="websocket_close_connect_lost">Lost connection</string>
    <string name="websocket_close_protocol_error">Protocal error</string>
    <string name="websocket_close_internal_error">Inner error</string>
    <string name="websocket_close_server_error">Server error</string>
    <string name="websocket_close_reconnect">Re-connect</string>
    <string name="websockt_response_timeout">Time out</string>
    <string name="notification">Notification</string>
    <string name="responce_success">Operation success</string>
    <string name="responce_failed">Operation failed</string>
    <string name="slide_menu_login_name">Not Logged in</string>
    <string name="slide_menu_nav_rules">Rules</string>
    <string name="slide_menu_nav_schedules">Schedules</string>
    <string name="slide_menu_nav_settings">Settings</string>
    <string name="main_tabbar_text_home">Home</string>
    <string name="main_tabbar_text_scenario">Scenario</string>
    <string name="main_tabbar_text_device">Device</string>
    <string name="main_tabbar_text_room">Room</string>
    <string name="main_header_text_home">Outdoor</string>
    <string name="main_header_text_scenario">Scenario</string>
    <string name="main_header_text_device">Device</string>
    <string name="main_header_text_room">Room</string>
    <string name="scenario_home">Home</string>
    <string name="scenario_away">Away</string>
    <string name="scenario_arm">Arm All</string>
    <string name="scenario_disarm">Disarm All</string>
    <string name="scenario_add_not_empty">Please add devices ana zones.</string>
    <string name="login_title">Login</string>
    <string name="logout_title">Log Out</string>
    <string name="menu_rule">Rule</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_module">Module</string>
    <string name="menu_device">Device</string>
    <string name="menu_about">About</string>
    <string name="scenario_tip">current scenario:</string>
    <string name="device_type_light">Light</string>
    <string name="device_type_curtain">Curtain</string>
    <string name="device_type_relay">Relay</string>
    <string name="device_type_zone">Zone</string>
    <string name="device_type_ip_camera">IP Camera</string>
    <string name="device_type_air_conditioner">Temperature Control</string>
    <string name="device_type_backaudio">Music</string>
    <string name="device_type_purifier">Purifier</string>
    <string name="device_type_ir_stb">STB</string>
    <string name="device_type_ir_customize">Customize</string>
    <string name="device_type_ir_ac">Air Conditioner</string>
    <string name="device_type_ir_television">TV</string>
    <string name="device_type_ir_dvd">DVD</string>
    <string name="device_type_ventilation">Ventilation</string>
    <string name="device_type_call_elevator">Ventilation</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="password_tip">&#062;&#061;5 Characters</string>
    <string name="forget_password">Forget password?</string>
    <string name="no_account">No account?</string>
    <string name="create_account">Create</string>
    <string name="user_login">User Login</string>
    <string name="guest_login">Guest Login</string>
    <string name="offline">offline</string>
    <string name="logout_tip">Sure logout?</string>
    <string name="title_activity_cube_basic">CubeBasicActivity</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="edit_scenario">Edit Scenario</string>
    <string name="edit_scenario_name">Scenario name</string>
    <string name="edit_scenario_select_icon">Select a scenario icon</string>
    <string name="edit_scenario_setting">Setting</string>
    <string name="edit_scenario_device">Device</string>
    <string name="edit_scenario_zone">Zone</string>
    <string name="edit_scenario_use_zone">Enable Zone</string>
    <string name="edit_scenario_select_device">Select Devices</string>
    <string name="edit_scenario_name_hint">&#060;&#061;20charachers</string>
    <string name="edit_scenario_all">All</string>
    <string name="register_title">register</string>
    <string name="country">country</string>
    <string name="chinese_countrCode">china +86</string>
    <string name="telephone_title">telephone_title</string>
    <string name="telephone_num">telephone_num</string>
    <string name="next_step">next</string>
    <string name="dialog_title">Confirm the phone number</string>
    <string name="dialog_content">A verification code will be sent to this number:</string>
    <string name="dialog_content_phone">153XXXX0000</string>
    <string name="select_country_title">Select Country</string>
    <string name="validate">validate</string>
    <string name="validate_code">validate code</string>
    <string name="retry">retry</string>
    <string name="forgot_title">Forgot Password?</string>
    <string name="room_master_bedroom">Master Bedroom</string>
    <string name="room_second_bedroom">Second Bedroom</string>
    <string name="room_guest_bedroom">Guest Bedroom</string>
    <string name="room_master_bathroom">Master Bathroom</string>
    <string name="room_second_bathroom">Second Bathroom</string>
    <string name="room_dining_room">Dining Room</string>
    <string name="room_kitchen">Kitchen</string>
    <string name="room_living_room">Living Room</string>
    <string name="room_name_tip">Room name</string>
    <string name="room_icon_select">Choose a room</string>
    <string name="name">Name</string>
    <string name="room">Room</string>
    <string name="more_info">More information</string>
    <string name="configure">Configuration</string>
    <string name="operation_success_tip">Operation success</string>
    <string name="operation_failed_tip">Operation failed</string>
    <string name="scenario_need_name_tip">Please input the scenario name.</string>
    <string name="scenario_need_device_zone_tip">Please add devices ana zones</string>
    <string name="room_need_name_tip">Please input room name.</string>
    <string name="account_setting_phone">Phone</string>
    <string name="account_setting_set_alias_name">Set aliase name</string>
    <string name="account_setting_change_password">Change password</string>
    <string name="account_setting_change_cube">Change Cube</string>
    <string name="account_setting_cube_setting">Cube Setting</string>
    <string name="room_step_1">Step 1: Choose a room</string>
    <string name="room_step_2">Step 2: Choose a room condition type</string>
    <string name="room_step_3">Step 3: Choose a trigger condition</string>
    <string name="room_step_4">Step 4: Choose a trigger value</string>
</resources>