<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:orientation="vertical">

    <include layout="@layout/layout_header_opaque" />

    <include layout="@layout/layout_divider" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/tip_text_style"
                android:text="@string/room_step_1" />

            <View style="@style/divider_style" />

            <com.honeywell.cube.widgets.SelectItem
                android:id="@+id/si_room"
                style="@style/common_item_style" />

            <View style="@style/divider_style" />

            <TextView
                style="@style/tip_text_style"
                android:text="@string/room_step_2" />

            <View style="@style/divider_style" />

            <com.honeywell.cube.widgets.SelectItem
                android:id="@+id/si_type"
                style="@style/common_item_style" />

            <View style="@style/divider_style" />

            <TextView
                style="@style/tip_text_style"
                android:text="@string/room_step_3" />

            <View style="@style/divider_style" />

            <com.honeywell.cube.widgets.SelectItem
                android:id="@+id/si_condition"
                style="@style/common_item_style" />

            <View style="@style/divider_style" />

            <TextView
                style="@style/tip_text_style"
                android:text="@string/room_step_4" />

            <View style="@style/divider_style" />

            <com.honeywell.cube.widgets.SelectItem
                android:id="@+id/si_value"
                style="@style/common_item_style" />

            <View style="@style/divider_style" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>