<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include layout="@layout/layout_header_opaque" />


        <View style="@style/divider_style" />

        <View
            style="@style/divider_style"
            android:layout_marginTop="@dimen/login_item_margin" />

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/common_margin_left_right"
            android:paddingRight="@dimen/common_margin_left_right"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/username"
                android:textSize="18sp" />
            <!--android:text="18516031650"-->
            <!--android:text="13816799755"-->
            <EditText
                android:id="@+id/et_username"
                style="@style/edit_text_style"
                android:hint="@string/phone_number"
                android:textSize="18sp" />
        </LinearLayout>

        <View style="@style/divider_style" />

        <View
            style="@style/divider_style"
            android:layout_marginTop="@dimen/login_item_margin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/common_margin_left_right"
            android:paddingRight="@dimen/common_margin_left_right"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tv_password_tip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/cb_show_password"
                android:layout_toRightOf="@+id/tv_password_tip"
                android:background="@null"
                android:hint="@string/password_tip"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColorHint="@color/text_color_hint"
                android:textSize="18sp"
                android:typeface="monospace" />

            <CheckBox
                android:id="@+id/cb_show_password"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/checkbox_show_password"
                android:button="@null"
                android:paddingLeft="10dp" />
        </RelativeLayout>

        <View style="@style/divider_style" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="@dimen/login_item_margin"
            android:background="@null"
            android:gravity="right"
            android:text="@string/forget_password"
            android:textColor="#9e9e9e" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_item_margin">

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/create_account"
            android:textColor="@color/btn_background_blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="@dimen/common_margin_left_right"
        android:layout_marginRight="@dimen/common_margin_left_right"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/btn_guest_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/guest_login"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btn_user_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:enabled="false"
            android:text="@string/user_login"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
