<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:orientation="vertical">

    <include layout="@layout/layout_header_opaque" />

    <View style="@style/divider_style" />

    <View
        style="@style/divider_style"
        android:layout_marginTop="@dimen/header_margin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/common_margin_left_right"
        android:paddingRight="@dimen/common_margin_left_right"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/account_setting_phone"
            android:textSize="18sp" />
        <!--android:text="18516031650"-->
        <TextView
            android:id="@+id/tv_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="@string/phone_number"
            android:text="13816799755"
            android:textSize="18sp" />
    </RelativeLayout>

    <View style="@style/divider_style" />

    <View
        style="@style/divider_style"
        android:layout_marginTop="20dp" />

    <RelativeLayout
        android:id="@+id/rl_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/common_margin_left_right"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/account_setting_set_alias_name"
            android:textSize="18sp" />
        <!--android:text="18516031650"-->
        <ImageView style="@style/image_right_style" />
    </RelativeLayout>

    <View style="@style/divider_margin_style" />


    <RelativeLayout
        android:id="@+id/rl_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/common_margin_left_right"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/account_setting_change_password"
            android:textSize="18sp" />
        <!--android:text="18516031650"-->
        <ImageView style="@style/image_right_style" />
    </RelativeLayout>

    <View style="@style/divider_style" />

    <View
        style="@style/divider_style"
        android:layout_marginTop="20dp" />

    <RelativeLayout
        android:id="@+id/rl_change_cube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/common_margin_left_right"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/account_setting_change_cube"
            android:textSize="18sp" />
        <!--android:text="18516031650"-->

        <TextView
            android:id="@+id/tv_change_cube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/iv_change_cube"
            android:text="0000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_change_cube"
            style="@style/image_right_style" />
    </RelativeLayout>

    <View style="@style/divider_margin_style" />

    <RelativeLayout
        android:id="@+id/rl_cube_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/common_margin_left_right"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/account_setting_cube_setting"
            android:textSize="18sp" />
        <!--android:text="18516031650"-->
        <ImageView style="@style/image_right_style" />
    </RelativeLayout>

    <View style="@style/divider_style" />

</LinearLayout>
